--- a/resources/docco.css
+++ b/resources/docco.css
@@ -6,7 +6,6 @@ body {
   line-height: 22px;
   color: #252519;
   margin: 0; padding: 0;
-  background-color: #F5F5FF;
   height:100%;
 }
 #container { min-height: 100%; }
@@ -133,17 +132,29 @@ ul.sections > li > span {
   ul.sections > li > span.code {
     background: #f5f5ff;
     overflow-x:auto;
-    border-bottom: 1px inset #CACACA;
+    -webkit-box-shadow: inset 0 0 5px #e5e5ee;
+    box-shadow: inset 0 0 5px #e5e5ee;
+    border: 1px solid #e5e5ee;
+    border-bottom: none;
+    margin:5px;
   }
+
+  ul.sections > li > span.docs pre {
+    margin: 15px 0 15px;
+    padding-left: 15px;
+  }
+
 
 }
 
-/*---------------------- High resolutions (> 641px) ---------------------*/
-@media only screen and (min-width: 641px) {
+/*----------------------  (> 481px) ---------------------*/
+@media only screen and (min-width: 481px) {
   #container {
     position: relative;
   }
-
+  body { 
+    background-color: #F5F5FF;
+  }
   p {
     margin: 0 0 15px 0;
   }
@@ -191,6 +202,8 @@ ul.sections > li > span {
     vertical-align: top;
     background: #f5f5ff;
     border: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
   }
 
   ul.sections > li > span.docs p tt, .docs p code {
@@ -221,7 +234,7 @@ ul.sections > li > span {
   }
 }
 
-/*---------------------- High resolutions (> 1025px) ---------------------*/
+/*---------------------- (> 1025px) ---------------------*/
 @media only screen and (min-width: 1025px) {
 
   #background {
