--- a/resources/docco.css
+++ b/resources/docco.css
@@ -122,7 +122,7 @@ ul.sections > li > span {
 
   ul.sections > li > span {
     display: block;
-    padding:5px 10px 5px 10px;
+    padding:5px 10px 0 10px;
   }
 
   ul.sections > li > span.docs {
@@ -136,7 +136,8 @@ ul.sections > li > span {
     box-shadow: inset 0 0 5px #e5e5ee;
     border: 1px solid #e5e5ee;
     border-bottom: none;
-    margin:5px;
+    margin:5px 10px 5px 10px;
+    padding-bottom: 5px;
   }
 
   ul.sections > li > span.docs pre {
