Allow scrolling contents list in classic
Makes all links accessible on large sites. Additional change for #302.

--- a/resources/linear/docco.css
+++ b/resources/linear/docco.css
@@ -169,7 +169,7 @@ ul.sections {
 
 .toc {
   max-height: 0;
-  overflow: hidden;
+  overflow: auto;
   text-align: center;
   font-size: 13px;
   line-height: 20px;
