--- a/resources/parallel/docco.css
+++ b/resources/parallel/docco.css
@@ -40,7 +40,7 @@ body {
   margin: 0; padding: 0;
   height:100%;
 }
-#container { min-height: 100%; }
+.container { min-height: 100%; }
 
 a {
   color: #000;
@@ -248,7 +248,7 @@ ul.sections > li > div {
 
 /*----------------------  (> 481px) ---------------------*/
 @media only screen and (min-width: 481px) {
-  #container {
+  .container {
     position: relative;
   }
   body {
@@ -286,7 +286,7 @@ ul.sections > li > div {
 
 
 
-  #background {
+  .background {
     position: absolute;
     top: 0; bottom: 0;
     width: 350px;
@@ -365,7 +365,7 @@ ul.sections > li > div {
     line-height: 24px;
   }
 
-  #background {
+  .background {
     width: 525px;
   }
   ul.sections > li > div.annotation {
